trunk/Archive2/e2/796093108d65b9/output
main.cpp: In function 'int main()':
main.cpp:12:1: error: jump to label 'b' [-fpermissive]
 b:
 ^
main.cpp:9:10: error:   from here [-fpermissive]
     goto b;
          ^
main.cpp:10:9: error:   crosses initialization of 'int b'
     int b=6;
         ^
